# blockdrawer

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
blockdrawer/: __init__.py  app.py  canvas.py  config.py  domain.py  editing.py  foam.py  geometry.py  grading.py  history.py  model.py  panels.py  preview.py  projection.py  reference_geometry.py  render_cache.py  session.py  spacing.py  topology.py  ui_helpers.py
tests/: __init__.py  helpers.py  test_app_helpers.py  test_config.py  test_foam.py  test_geometry.py  test_history.py  test_model.py  test_openfoam_integration.py  test_preview.py  test_projection.py  test_render_cache.py  test_session.py  test_topology_split_combine.py
