[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blockdrawer"
version = "0.1.0"
description = "A graphical block-topology editor that exports OpenFOAM blockMeshDict files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.gui-scripts]
blockdrawer = "blockdrawer.app:main"

[tool.setuptools.packages.find]
include = ["blockdrawer*"]
